welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:40: error: not found: value Colore
	ligne(Color.orange,Colore.blue)
                           ^